Make a few changes to manuscript
- Add custom LaTeX commands file
- Update Makefile to include rendering option that skips code
- Edit and format some writing

--- a/article/Makefile
+++ b/article/Makefile
@@ -62,6 +62,8 @@ fresh: clean
 	$(RM) *.ps *.bbl *.ind *.dvi 
 	$(RM) -r cache/* figure/*
 
+skip_code:
+	quarto render ms.qmd --to jss-pdf --no-execute
 
 # Create a virtual Python environment
 venv:
