--- a/SBIED/Lecture1/Makefile
+++ b/SBIED/Lecture1/Makefile
@@ -1,3 +1,8 @@
 default: slides.pdf notes.pdf
 
-include ../rules.mk
+slides.pdf : source.qmd
+	quarto render "source.qmd" --to beamer
+
+notes.pdf : source.qmd
+	quarto render "source.qmd" --to pdf
+
